add file identifier to Title metadata

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
   "UrlFormat": "https://ccbuchner.de/clip_code-{0}-{1:D2}/",
-  "FilenameFormat": "{0}_{1:D2}.eps",
+  "FilenameFormat": "{0}_{1:D2}",
   "DefaultAmount": 50
 }
